--- a/index.html
+++ b/index.html
@@ -2,18 +2,36 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>SayHi - школа обучения английскому языку</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="jquery-ui/jquery-ui.js"></script>
 </head>
 
 <body>
 
-    <h1>Hello world!</h1>
+    <a href="#" class="logo"><img src="image/logo.png" alt=""></a>
 
+    <header>
+        <div class="inner-width">
+            <i class="menu-toggle-btn fas fa-bars"></i>
+            <nav class="navigation-menu">
+                <a href="#" class="nav-a"><i></i>Курсы</a>
+                <a href="#" class="nav-a"><i></i>Преподаватели</a>
+                <a href="#" class="nav-a"><i></i>Отзывы</a>
+                <a href="#" class="nav-a"><i></i>Контакты</a>
+                <a href="#" class="a-special"><i></i>Пробный урок</a>
+            </nav>
+        </div>
+    </header>
+
+
+    <div class="head_text">Разговорные курсы английского языка</div>
+
+    
 </body>
 
 </html>
