final home page and course page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home-page.css" />
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
     <header>
         <div class="inner-width">
             <nav class="navigation-menu">
-                <a href="#" class="nav-a">Курсы</a>
+                <a href="course.html" class="nav-a">Курсы</a>
                 <a href="#" class="nav-a">Преподаватели</a>
                 <a href="#" class="nav-a">Отзывы</a>
                 <a href="#" class="nav-a">Контакты</a>
@@ -100,23 +100,94 @@
 
 
     <div class="div-btn-other-course">
-        <button class="">
-            <p class="">Другие курсы</p>
+        <button>
+            <p><a href="course.html">Другие курсы</a></p>
         </button>
     </div>
 
 
 
-    <div>
-        <div class="body-course-cor">
-            <p>Индивидуальный подход к каждому студенту</p>
-        </div>
-        
-        
+    <div class="body-course-cor">
+        <p>Индивидуальный подход к каждому студенту</p>
+    </div>
+    <div class="body-img-statue-of-liberty">
+        <img src="image/statue of Liberty.png">
+    </div>
+    <div class="body-p-add">
+        <p>80% курсов — практика говорения</p>
+    </div>
+    <div class="prob-lesson-div-body">
+        <p class="prob-lesson-body">Пробное занятие</p>
 
-        <div class="body-img-statue-of-liberty">
-            <img src="image/statue of Liberty.png">
+        <button class="btn-prob-lesson-body">
+            <p class="p-prob-lesson-body">Оставить заявку</p>
+        </button>
+    </div>
+
+
+
+    <div class="body-speak">
+        <p>Вы начнёте говорить с 1 урока</p>
+    </div>
+    <div class="body-img-speak">
+        <img src="image/big ben.png">
+    </div>
+    <div class="prob-lesson-div-body-speak">
+        <p class="prob-lesson-body-speak">Пробное занятие</p>
+
+        <button class="btn-prob-lesson-body-speak">
+            <p class="p-prob-lesson-body-speak">Оставить заявку</p>
+        </button>
+    </div>
+
+
+    <div class="block-course-children-adult">
+        <p>Записаться на бесплатный урок</p>
+
+
+        <div class="block-course-adult">
+            <p class="block-course-a">Взрослые</p>
+
+            <button class="btn-block-course">
+                <p class="btn-block-course-p">Оставить заявку</p>
+            </button>
         </div>
+        <div class="block-course-children">
+            <p class="block-course-c">Дети</p>
+
+            <button class="btn-block-course">
+                <p class="btn-block-course-p">Оставить заявку</p>
+            </button>
+        </div>
+
+    </div>
+
+
+
+    <div class="footer-information">
+        <div>
+            <ul>
+                <li>Ст.м Институт Культуры</li>
+                <li>Ул. Моглигелвская 2</li>
+            </ul>
+        </div>
+        <br />
+        <div>
+            <ul>
+                <li>Телефон:</li>
+                <li>+375 (25) 466-23-87</li>
+            </ul>
+        </div>
+        <br />
+        <div>
+            <ul>
+                <li>E-mail</li>
+                <li>sayhi-englishschool@gmail.com</li>
+            </ul>
+        </div>
+    </div>
+    <div class="maps-footer">
+        <img src="image/maps.png">
     </div>
 
 
@@ -133,16 +204,16 @@
 
         <a href="#" class="logo-footer"><img src="image/logo.png" alt="" class="logo-fut"></a>
 
-        <ul class="social-;ist-icon">
-            <li><a href="">Курсы</a></li>
-            <li><a href="">Преподаватели</a></li>
-            <li><a href="">Вопрос-ответ</a></li>
+        <ul class="social-list-icon">
+            <li><a href="course.html" class="social-list">Курсы</a></li>
+            <li><a href="#" class="social-list">Преподаватели</a></li>
+            <li><a href="#" class="social-list">Вопрос-ответ</a></li>
         </ul>
 
         <ul>
-            <li><a href="">Стоимость</a></li>
-            <li><a href="">Отзывы</a></li>
-            <li><a href="#">Адреса и телефоны</a></li>
+            <li><a href="#" class="social-list">Стоимость</a></li>
+            <li><a href="#" class="social-list">Отзывы</a></li>
+            <li><a href="#" class="social-list">Адреса и телефоны</a></li>
         </ul>
     </footer>
 
