update home & teacher & course page

--- a/teacher-adults.html
+++ b/teacher-adults.html
@@ -2,15 +2,108 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>SayHi - школа обучения английскому языку</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
+    <link rel="stylesheet" href="css/teacher-adults.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Khula:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="jquery-ui/jquery-ui.js"></script>
 </head>
 
 <body>
+
+    <a href="index.html" class="logo"><img src="image/logo.png" alt=""></a>
+
+    <header>
+        <div class="inner-width">
+            <nav class="navigation-menu">
+                <a href="course.html" class="nav-a">Курсы</a>
+                <a href="teacher-adults.html" class="nav-a">Преподаватели</a>
+                <a href="#" class="nav-a">Отзывы</a>
+                <a href="#" class="nav-a">Контакты</a>
+                <a href="#" class="a-special">Пробный урок</a>
+            </nav>
+        </div>
+    </header>
+
+
+
+    <div class="header-text">Преподаватели</div>
+
+
+
+    <div class="kate">
+        <img src="image/kate/kate.png">
+        <p>Екатерина</p>
+    </div>
+    <div class="alex">
+        <img src="image/alex/alex.png">
+        <p>Александр</p>
+    </div>
+    <div class="denis">
+        <img src="image/denis/denis.png">
+        <p>Денис</p>
+    </div>
+    <div class="kseniya">
+        <img src="image/kseniya/kseniya.png">
+        <p>Ксения</p>
+    </div>
+    <div class="oleg">
+        <img src="image/oleg/oleg.png">
+        <p>Олег</p>
+    </div>
+    <div class="sveta">
+        <img src="image/sveta/sveta.png">
+        <p>Светлана</p>
+    </div>
+    <div class="vika">
+        <img src="image/vika/vika.png">
+        <p>Виктория</p>
+    </div>
+
+
+
+    <div class="prob-les">
+        <p>Записаться на бесплатный пробный урок</p>
+
+        <button>
+            <p>Оставить заявку</p>
+        </button>
+
+    </div>
+
+
+
+
+
+    <footer>
+
+        <div class="footer-social-icons">
+            <ul class="">
+                <li><a href="https://vk.com/" target="__blank"><img src="image/vk-logo.png"></a></li>
+                <li><a href="https://www.instagram.com/" target="__blank"><img src="image/inst-logo.png"></a></li>
+                <li><a href="https://www.facebook.com/" target="__blank"><img src="image/facebook-logo.png"></a></li>
+            </ul>
+        </div>
+
+        <a href="#" class="logo-footer"><img src="image/logo.png" alt="" class="logo-fut"></a>
+
+        <ul class="social-list-icon">
+            <li><a href="course.html" class="social-list">Курсы</a></li>
+            <li><a href="teacher-adults.html" class="social-list">Преподаватели</a></li>
+            <li><a href="#" class="social-list">Вопрос-ответ</a></li>
+        </ul>
+
+        <ul>
+            <li><a href="#" class="social-list">Стоимость</a></li>
+            <li><a href="#" class="social-list">Отзывы</a></li>
+            <li><a href="#" class="social-list">Адреса и телефоны</a></li>
+        </ul>
+    </footer>
 
 </body>
 
