--- a/course.html
+++ b/course.html
@@ -22,7 +22,7 @@
         <div class="inner-width">
             <nav class="navigation-menu">
                 <a href="course.html" class="nav-a">Курсы</a>
-                <a href="#" class="nav-a">Преподаватели</a>
+                <a href="teacher-adults.html" class="nav-a">Преподаватели</a>
                 <a href="#" class="nav-a">Отзывы</a>
                 <a href="#" class="nav-a">Контакты</a>
                 <a href="#" class="a-special">Пробный урок</a>
@@ -78,7 +78,7 @@
     <div class="business-english">
         <p>Деловой английский</p>
 
-        <button >
+        <button>
             <p>Оставить заявку</p>
         </button>
 
@@ -116,7 +116,7 @@
 
         <ul class="social-list-icon">
             <li><a href="course.html" class="social-list">Курсы</a></li>
-            <li><a href="#" class="social-list">Преподаватели</a></li>
+            <li><a href="teacher-adults.html" class="social-list">Преподаватели</a></li>
             <li><a href="#" class="social-list">Вопрос-ответ</a></li>
         </ul>
 
