add teacher-adults person pages

--- a/kseniya.html
+++ b/kseniya.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
-    <link rel="stylesheet" href="css/teacher-adults.css" />
+    <link rel="stylesheet" href="css/teacher.css" />
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@700&display=swap" rel="stylesheet">
@@ -32,37 +32,64 @@
 
 
 
-    <div class="header-text">Преподаватели</div>
-
-
-
-    <div class="kate">
-        <a href="kate.html"><img src="image/kate/kate.png"></a>
-        <p>Екатерина</p>
-    </div>
-    <div class="alex">
-        <a href="alex.html"><img src="image/alex/alex.png"></a>
-        <p>Александр</p>
-    </div>
-    <div class="denis">
-        <a href="denis.html"><img src="image/denis/denis.png"></a>
-        <p>Денис</p>
-    </div>
-    <div class="kseniya">
-        <a href="kseniya.html"><img src="image/kseniya/kseniya.png"></a>
+    <div class="header-text">
         <p>Ксения</p>
     </div>
-    <div class="oleg">
-        <a href="oleg.html"><img src="image/oleg/oleg.png"></a>
-        <p>Олег</p>
+
+
+
+    <div class="kate-img">
+        <img src="image/kseniya/kseniya.png">
     </div>
-    <div class="sveta">
-        <a href="sveta.html"><img src="image/sveta/sveta.png"></a>
-        <p>Светлана</p>
+
+
+
+    <div class="obs-course">
+        <p>Преподаёт 3 курса:</p>
     </div>
-    <div class="vika">
-        <a href="vika.html"><img src="image/vika/vika.png"></a>
+
+
+
+    <div class="list-course">
+        <ul>
+            <li>Деловой английский</li>
+            <li>Собеседование на английском</li>
+            <li>Общий английский</li>
+        </ul>
+    </div>
+
+
+
+    <div class="secti">
+        <section>
+            Девушка является дипломированным преподавателем по английскому языку.
+            Много путешествует по англоязычным
+            странам.
+            Большой упор делает на умение быстро завести разговор с любым иностранцем.
+            С её преподавением вы точно
+            заговорите!
+        </section>
+    </div>
+
+
+
+    <div class="other-teach">
+        <section>Другие преподаватели:</section>
+    </div>
+
+
+
+    <div class="photo">
+        <img src="image/vika/vika.png">
         <p>Виктория</p>
+    </div>
+    <div class="photo">
+        <img src="image/alex/alex.png">
+        <p>Александр</p>
+    </div>
+    <div class="photo">
+        <img src="image/kate/kate.png">
+        <p>Екатерина</p>
     </div>
 
 
@@ -78,15 +105,14 @@
 
 
 
-
-
     <footer>
 
         <div class="footer-social-icons">
             <ul class="">
                 <li><a href="https://vk.com/" target="__blank"><img src="image/vk-logo.png"></a></li>
                 <li><a href="https://www.instagram.com/" target="__blank"><img src="image/inst-logo.png"></a></li>
-                <li><a href="https://www.facebook.com/" target="__blank"><img src="image/facebook-logo.png"></a></li>
+                <li><a href="https://www.facebook.com/" target="__blank"><img src="image/facebook-logo.png"></a>
+                </li>
             </ul>
         </div>
 
