--- a/kate.html
+++ b/kate.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
-    <link rel="stylesheet" href="css/teacher-adults.css" />
+    <link rel="stylesheet" href="css/teacher.css" />
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@700&display=swap" rel="stylesheet">
@@ -32,37 +32,62 @@
 
 
 
-    <div class="header-text">Преподаватели</div>
-
-
-
-    <div class="kate">
-        <a href="kate.html"><img src="image/kate/kate.png"></a>
+    <div class="header-text">
         <p>Екатерина</p>
     </div>
-    <div class="alex">
-        <a href="alex.html"><img src="image/alex/alex.png"></a>
-        <p>Александр</p>
+
+
+
+    <div class="kate-img">
+        <img src="image/kate/kate.png">
     </div>
-    <div class="denis">
-        <a href="denis.html"><img src="image/denis/denis.png"></a>
-        <p>Денис</p>
+
+
+
+    <div class="obs-course">
+        <p>Преподаёт 3 курса:</p>
     </div>
-    <div class="kseniya">
-        <a href="kseniya.html"><img src="image/kseniya/kseniya.png"></a>
-        <p>Ксения</p>
+
+
+
+    <div class="list-course">
+        <ul>
+            <li>Английский для путешествий</li>
+            <li>Говори как английская королева</li>
+            <li>Английский для программистов</li>
+        </ul>
     </div>
-    <div class="oleg">
-        <a href="oleg.html"><img src="image/oleg/oleg.png"></a>
-        <p>Олег</p>
+
+
+
+    <div class="secti">
+        <section>
+            Катя очень много путешествует по миру. 3 года жила и училась в Великобритании.
+            Большой упор делает на акцент и
+            умение
+            вести разговоры. С её преподавением вы точно заговорите!
+        </section>
     </div>
-    <div class="sveta">
-        <a href="sveta.html"><img src="image/sveta/sveta.png"></a>
+
+
+
+    <div class="other-teach">
+        <section>Другие преподаватели:</section>
+    </div>
+
+
+
+    <div class="photo">
+        <img src="image/sveta/sveta.png">
         <p>Светлана</p>
     </div>
-    <div class="vika">
-        <a href="vika.html"><img src="image/vika/vika.png"></a>
+    <div class="photo">
+        <img src="image/vika/vika.png">
         <p>Виктория</p>
+    </div>
+    <div class="photo">
+        <img src="image/oleg/oleg.png">
+        <p>Олег</p>
     </div>
 
 
@@ -75,8 +100,6 @@
         </button>
 
     </div>
-
-
 
 
 
