--- a/vika.html
+++ b/vika.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
-    <link rel="stylesheet" href="css/teacher-adults.css" />
+    <link rel="stylesheet" href="css/teacher.css" />
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@700&display=swap" rel="stylesheet">
@@ -32,37 +32,60 @@
 
 
 
-    <div class="header-text">Преподаватели</div>
+    <div class="header-text">
+        <p>Виктория</p>
+    </div>
 
 
 
-    <div class="kate">
-        <a href="kate.html"><img src="image/kate/kate.png"></a>
-        <p>Екатерина</p>
+    <div class="kate-img">
+        <img src="image/vika/vika.png">
     </div>
-    <div class="alex">
-        <a href="alex.html"><img src="image/alex/alex.png"></a>
-        <p>Александр</p>
+
+
+
+    <div class="obs-course">
+        <p>Преподаёт курс:</p>
     </div>
-    <div class="denis">
-        <a href="denis.html"><img src="image/denis/denis.png"></a>
-        <p>Денис</p>
+
+
+
+    <div class="list-course">
+        <ul>
+            <li>Общий английский</li>
+        </ul>
     </div>
-    <div class="kseniya">
-        <a href="kseniya.html"><img src="image/kseniya/kseniya.png"></a>
-        <p>Ксения</p>
+
+
+
+    <div class="secti">
+        <section>
+            Девушка преподает английский язык в Белорусском госудастревеном университете.
+            Легко и доступно объясняет все
+            правила и
+            может поставить правильный акцент всего за несколько месяцев занятий!
+        </section>
     </div>
-    <div class="oleg">
-        <a href="oleg.html"><img src="image/oleg/oleg.png"></a>
-        <p>Олег</p>
+
+
+
+    <div class="other-teach">
+        <section>Другие преподаватели:</section>
     </div>
-    <div class="sveta">
-        <a href="sveta.html"><img src="image/sveta/sveta.png"></a>
+
+
+
+    <div class="photo">
+        <img src="image/sveta/sveta.png">
         <p>Светлана</p>
     </div>
-    <div class="vika">
-        <a href="vika.html"><img src="image/vika/vika.png"></a>
-        <p>Виктория</p>
+    <div class="photo">
+        <img src="image/oleg/oleg.png">
+        <p>Олег</p>
+    </div>
+    <div class="photo">
+        <img src="image/kseniya/kseniya.png">
+        <p>Ксения</p>
     </div>
 
 
@@ -75,8 +98,6 @@
         </button>
 
     </div>
-
-
 
 
 
