--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
     <link rel="stylesheet" href="css/home-page.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@700&display=swap" rel="stylesheet">
@@ -190,7 +191,7 @@
         <img src="image/maps.png">
     </div>
 
-
+    <a id="button"></a>
 
     <footer>
 
@@ -218,7 +219,7 @@
     </footer>
 
 
-    <!-- <script src="js/scroll.js"></script> -->
+    <script src="js/buttom-up.js"></script>
 </body>
 
 </html>
