--- a/vika.html
+++ b/vika.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
     <link rel="stylesheet" href="css/teacher.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@700&display=swap" rel="stylesheet">
@@ -99,7 +100,7 @@
 
     </div>
 
-
+    <a id="button"></a>
 
     <footer>
 
@@ -125,6 +126,8 @@
             <li><a href="#" class="social-list">Адреса и телефоны</a></li>
         </ul>
     </footer>
+
+    <script src="js/buttom-up.js"></script>
 
 </body>
 
