--- a/beginner.html
+++ b/beginner.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
-    <link rel="stylesheet" href="css/course.css" />
+    <link rel="stylesheet" href="css/english-level.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
@@ -32,74 +32,87 @@
     </header>
 
 
+    <div class="head_text">
+        <p>Beginner</p>
+    </div>
+    <div class="bridge">
+        <img src="image/beginer/bridge.png">
+    </div>
+    <div class="prob-lesson-div">
+        <p class="prob-lesson">Пробное занятие</p>
 
-    <div class="header-text">Наши курсы</div>
-
-
-
-    <div class="english-cor">
-        <p>Говори как английская королева</p>
-
-        <button>
-            <p>Оставить заявку</p>
+        <button class="btn-prob-lesson">
+            <p class="p-prob-lesson">Оставить заявку</p>
         </button>
-
-        <a href="course-speak.html">
-            <p>подробнее</p>
-        </a>
     </div>
 
 
-    <div class="total-english">
-        <p>Общий английский</p>
 
-        <button>
-            <p>Оставить заявку</p>
+    <div class="opis-text">
+        <p>Наши преподватели простым языком объяснят вам основы языка</p>
+    </div>
+    <div class="bus">
+        <img src="image/beginer/bus.png">
+    </div>
+    <div class="opis-lesson-div">
+        <p class="prob-lesson">Пробное занятие</p>
+        <button class="btn-prob-lesson">
+            <p class="p-prob-lesson">Оставить заявку</p>
         </button>
-
-        <a href="obsh-english.html">
-            <p>подробнее</p>
-        </a>
     </div>
 
 
-    <div class="english-for-work">
-        <p>Английский для работы в IT</p>
 
-        <button>
-            <p>Оставить заявку</p>
-        </button>
-
-        <a href="forIT.html">
-            <p>подробнее</p>
-        </a>
+    <div class="add-text">
+        <p>Вам поставят правильный акцент. Ваши знания, полученные на курсе, позволят вам понимать и вести беседу с
+            иностранцами</p>
+    </div>
+    <div class="under">
+        <img src="image/beginer/under.png">
     </div>
 
 
-    <div class="business-english">
+
+    <div class="foot-text">
+        <p>Вы сможете путешествовать в любую страну мира</p>
+    </div>
+    <div class="big-ben">
+        <img src="image/beginer/big ben.png">
+    </div>
+    <div class="foot-lesson-div">
+        <p class="prob-lesson">Пробное занятие</p>
+        <button class="btn-prob-lesson">
+            <p class="p-prob-lesson">Оставить заявку</p>
+        </button>
+    </div>
+
+
+
+    <div class="busines-english">
         <p>Деловой английский</p>
 
         <button>
             <p>Оставить заявку</p>
         </button>
 
-        <a href="business-english.html">
+        <a href="#">
             <p>подробнее</p>
         </a>
     </div>
-
-
-    <div class="interview-in-english">
-        <p>Общение на английском</p>
+    <div class="obsh-english">
+        <p>Общий английский</p>
 
         <button>
             <p>Оставить заявку</p>
         </button>
 
-        <a href="sobes.html">
+        <a href="#">
             <p>подробнее</p>
         </a>
     </div>
+
+
+
 
     <a id="button"></a>
 
@@ -128,8 +141,8 @@
         </ul>
     </footer>
 
-    <script src="js/buttom-up.js"></script>
 
+    <script src="js/buttom-up.js"></script>
 </body>
 
 </html>
