--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="blocks-course-level-p">Оставить заявку</p>
             </button>
 
-            <a href="#">
+            <a href="beginner.html">
                 <p>подробнее</p>
             </a>
         </div>
@@ -56,7 +56,7 @@
             </button>
 
 
-            <a href="#">
+            <a href="elementary.html">
                 <p>подробнее</p>
             </a>
         </div>
@@ -68,7 +68,7 @@
                 <p class="blocks-course-level-p">Оставить заявку</p>
             </button>
 
-            <a href="#">
+            <a href="intermediate.html">
                 <p>подробнее</p>
             </a>
         </div>
