--- a/sobes.html
+++ b/sobes.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
-    <link rel="stylesheet" href="css/course.css" />
+    <link rel="stylesheet" href="css/allcourse.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
@@ -26,80 +26,93 @@
                 <a href="teacher-adults.html" class="nav-a">Преподаватели</a>
                 <a href="#" class="nav-a">Отзывы</a>
                 <a href="#" class="nav-a">Контакты</a>
-                <a href="#" class="a-special">Пробный урок</a>
+                <a href="#" class="nav-a">Пробный урок</a>
             </nav>
         </div>
     </header>
 
 
+    <div class="head_text">
+        <p>Общение</p>
+        <p>на</p>
+        <p>английском</p>
+    </div>
+    <div class="bridge">
+        <img src="image/sobes/bus.png">
+    </div>
+    <div class="prob-lesson-div">
+        <p class="prob-lesson">Пробное занятие</p>
 
-    <div class="header-text">Наши курсы</div>
-
-
-
-    <div class="english-cor">
-        <p>Говори как английская королева</p>
-
-        <button>
-            <p>Оставить заявку</p>
+        <button class="btn-prob-lesson">
+            <p class="p-prob-lesson">Оставить заявку</p>
         </button>
-
-        <a href="course-speak.html">
-            <p>подробнее</p>
-        </a>
     </div>
 
 
-    <div class="total-english">
-        <p>Общий английский</p>
 
-        <button>
-            <p>Оставить заявку</p>
+    <div class="opis-text">
+        <p>После курса у вас будет готовое портфолио на английском языке</p>
+    </div>
+    <div class="bus">
+        <img src="image/sobes/city.png">
+    </div>
+    <div class="opis-lesson-div">
+        <p class="prob-lesson">Пробное занятие</p>
+        <button class="btn-prob-lesson">
+            <p class="p-prob-lesson">Оставить заявку</p>
         </button>
-
-        <a href="obsh-english.html">
-            <p>подробнее</p>
-        </a>
     </div>
 
 
-    <div class="english-for-work">
-        <p>Английский для работы в IT</p>
 
-        <button>
-            <p>Оставить заявку</p>
-        </button>
-
-        <a href="forIT.html">
-            <p>подробнее</p>
-        </a>
+    <div class="add-text">
+        <p>Вы сможете легко пройти собеседование на работу даже у самого требовательного нанимателя</p>
+    </div>
+    <div class="under">
+        <img src="image/sobes/bridge.png">
     </div>
 
 
-    <div class="business-english">
-        <p>Деловой английский</p>
 
-        <button>
-            <p>Оставить заявку</p>
+    <div class="foot-text">
+        <p>Ваши знания английского сделают вас востребованным специалистом</p>
+    </div>
+    <div class="big-ben">
+        <img src="image/sobes/tele.png">
+    </div>
+    <div class="foot-lesson-div">
+        <p class="prob-lesson">Пробное занятие</p>
+        <button class="btn-prob-lesson">
+            <p class="p-prob-lesson">Оставить заявку</p>
         </button>
-
-        <a href="business-english.html">
-            <p>подробнее</p>
-        </a>
     </div>
 
 
-    <div class="interview-in-english">
-        <p>Общение на английском</p>
 
-        <button>
-            <p>Оставить заявку</p>
-        </button>
-
-        <a href="sobes.html">
-            <p>подробнее</p>
-        </a>
+    <div class="section-footer-teach">
+        <section>Преподаватель данного курса:</section>
     </div>
+    <div class="foot-div-teach">
+        <div>
+            <img src="image/sobes/kseniya.png">
+        </div>
+        <div>
+            <p>Ксения</p>
+        </div>
+        <div>
+            <section>Девушка является дипломированным преподавателем по английскому языку. Много путешествует по
+                англоязычным странам.</section>
+        </div>
+        <div>
+            <a href="kseniya.html">
+                <button>
+                    <p>Подробнее о преподавателе</p>
+                </button>
+            </a>
+        </div>
+    </div>
+
+
 
     <a id="button"></a>
 
@@ -128,8 +141,8 @@
         </ul>
     </footer>
 
-    <script src="js/buttom-up.js"></script>
 
+    <script src="js/buttom-up.js"></script>
 </body>
 
 </html>
