fix bag & create modal pages

--- a/course.html
+++ b/course.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
     <link rel="stylesheet" href="css/course.css" />
+    <link rel="stylesheet" href="css/modals-page.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
                 <a href="teacher-adults.html" class="nav-a">Преподаватели</a>
                 <a href="#" class="nav-a">Отзывы</a>
                 <a href="#" class="nav-a">Контакты</a>
-                <a href="#" class="a-special">Пробный урок</a>
+                <a href="#" class="a-special" id="myBtn">Пробный урок</a>
             </nav>
         </div>
     </header>
@@ -40,7 +41,7 @@
     <div class="english-cor">
         <p>Говори как английская королева</p>
 
-        <button>
+        <button id="myBtn">
             <p>Оставить заявку</p>
         </button>
 
@@ -53,7 +54,7 @@
     <div class="total-english">
         <p>Общий английский</p>
 
-        <button>
+        <button id="myBtn">
             <p>Оставить заявку</p>
         </button>
 
@@ -66,7 +67,7 @@
     <div class="english-for-work">
         <p>Английский для работы в IT</p>
 
-        <button>
+        <button id="myBtn">
             <p>Оставить заявку</p>
         </button>
 
@@ -79,7 +80,7 @@
     <div class="business-english">
         <p>Деловой английский</p>
 
-        <button>
+        <button id="myBtn">
             <p>Оставить заявку</p>
         </button>
 
@@ -92,7 +93,7 @@
     <div class="interview-in-english">
         <p>Общение на английском</p>
 
-        <button>
+        <button id="myBtn">
             <p>Оставить заявку</p>
         </button>
 
@@ -100,6 +101,25 @@
             <p>подробнее</p>
         </a>
     </div>
+
+
+
+    <div class="myModal" id="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Оставьте заявку на бесплатный пробный урок</p>
+            <div class="form-modal">
+                <p>Ваши данные</p>
+                <form>
+                    <input type="text" placeholder="+375 (__)___-__-__" required>
+                    <input type="text" placeholder="Имя" required>
+                    <input type="email" placeholder="Электронная почта" required>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
 
     <a id="button"></a>
 
@@ -129,7 +149,7 @@
     </footer>
 
     <script src="js/buttom-up.js"></script>
-
+    <script src="js/modals-page.js"></script>
 </body>
 
 </html>
