--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="teacher-adults.html" class="nav-a">Преподаватели</a>
                 <a href="#">Отзывы</a>
                 <a class="nav-cont">Контакты</a>
-                <a href="#" class="a-special" id="myBtn">Пробный урок</a>
+                <a class="a-special" id="myBtn">Пробный урок</a>
             </nav>
         </div>
     </header>
