--- a/forIT.html
+++ b/forIT.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1" />
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
     <link rel="stylesheet" href="css/allcourse.css" />
+    <link rel="stylesheet" href="css/modals-page.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
                 <a href="teacher-adults.html" class="nav-a">Преподаватели</a>
                 <a href="#" class="nav-a">Отзывы</a>
                 <a href="#" class="nav-a">Контакты</a>
-                <a href="#" class="nav-a">Пробный урок</a>
+                <a href="#" class="nav-a" id="myBtn">Пробный урок</a>
             </nav>
         </div>
     </header>
@@ -43,7 +44,7 @@
     <div class="prob-lesson-div">
         <p class="prob-lesson">Пробное занятие</p>
 
-        <button class="btn-prob-lesson">
+        <button class="btn-prob-lesson" id="myBtn">
             <p class="p-prob-lesson">Оставить заявку</p>
         </button>
     </div>
@@ -58,7 +59,7 @@
     </div>
     <div class="opis-lesson-div">
         <p class="prob-lesson">Пробное занятие</p>
-        <button class="btn-prob-lesson">
+        <button class="btn-prob-lesson" id="myBtn">
             <p class="p-prob-lesson">Оставить заявку</p>
         </button>
     </div>
@@ -82,7 +83,7 @@
     </div>
     <div class="foot-lesson-div">
         <p class="prob-lesson">Пробное занятие</p>
-        <button class="btn-prob-lesson">
+        <button class="btn-prob-lesson" id="myBtn">
             <p class="p-prob-lesson">Оставить заявку</p>
         </button>
     </div>
@@ -109,6 +110,23 @@
                     <p>Подробнее о преподавателе</p>
                 </button>
             </a>
+        </div>
+    </div>
+
+
+
+    <div class="myModal" id="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Оставьте заявку на бесплатный пробный урок</p>
+            <div class="form-modal">
+                <p>Ваши данные</p>
+                <form>
+                    <input type="text" placeholder="+375 (__)___-__-__" required>
+                    <input type="text" placeholder="Имя" required>
+                    <input type="email" placeholder="Электронная почта" required>
+                </form>
+            </div>
         </div>
     </div>
 
@@ -143,6 +161,7 @@
 
 
     <script src="js/buttom-up.js"></script>
+    <script src="js/modals-page.js"></script>
 </body>
 
 </html>
