--- a/denis.html
+++ b/denis.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="height=device-height, initial-scale = 1" />
     <link rel="stylesheet" href="css/teacher.css" />
     <link rel="stylesheet" href="css/modals-page.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="image/flag.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@700&display=swap" rel="stylesheet">
